@@ -272,75 +272,76 @@ SPI NAND Flash Support List:
 018. WINBOND W25N01GW
 019. WINBOND W25N02KV
 020. WINBOND W25M02GV
-021. MXIC MX35LF1G
-022. MXIC MX35LF2G
-023. MXIC MX35LF2GE4AD
-024. ZENTEL A5U12A21ASC
-025. ZENTEL A5U1GA21BWS
-026. ETRON EM73C044SNB
-027. ETRON EM73C044SND
-028. ETRON EM73C044SNF
-029. ETRON EM73C044VCA
-030. ETRON EM73C044VCD
-031. ETRON EM73D044VCA
-032. ETRON EM73D044VCB
-033. ETRON EM73D044VCD
-034. ETRON EM73D044VCG
-035. ETRON EM73D044VCH
-036. ETRON EM73D044SNA
-037. ETRON EM73D044SNC
-038. ETRON EM73D044SND
-039. ETRON EM73D044SNF
-040. ETRON EM73E044SNA
-041. TOSHIBA TC58CVG0S3H
-042. TOSHIBA TC58CVG1S3H
-043. TOSHIBA TC58CVG2S0H
-044. KIOXIA TC58CVG2S0HRAIJ
-045. MICRON MT29F1G01
-046. MICRON MT29F2G01
-047. MICRON MT29F4G01
-048. HEYANG HYF1GQ4UAACAE
-049. HEYANG HYF2GQ4UAACAE
-050. HEYANG HYF2GQ4UHCCAE
-051. HEYANG HYF1GQ4UDACAE
-052. HEYANG HYF2GQ4UDACAE
-053. PN PN26G01A-X
-054. PN PN26G02A-X
-055. PN PN26Q01A-X
-056. ATO ATO25D1GA
-057. ATO ATO25D2GA
-058. ATO ATO25D2GB
-059. FM FM25S01
-060. FM FM25S01A
-061. FM FM25G01B
-062. FM FM25G02B
-063. FM FM25G02C
-064. FM FM25G02
-065. XTX XT26G02B
-066. XTX XT26G01C
-067. XTX XT26G01A
-068. XTX XT26G02A
-069. MIRA PSU1GS20BN
-070. BIWIN BWJX08U
-071. BIWIN BWET08U
-072. FORESEE FS35ND01GD1F1
-073. FORESEE FS35ND01GS1F1
-074. FORESEE FS35ND02GS2F1
-075. FORESEE FS35ND02GD1F1
-076. FORESEE FS35ND01GS1Y2
-077. FORESEE FS35ND02G-S3Y2
-078. FORESEE FS35ND04G-S2Y2
-079. DS DS35Q2GA
-080. DS DS35M2GA
-081. DS DS35Q1GA
-082. DS DS35M1GA
-083. FISON CS11G0T0A0AA
-084. FISON CS11G1T0A0AA
-085. FISON CS11G0G0A0AA
-086. TYM TYM25D2GA01
-087. TYM TYM25D2GA02
-088. TYM TYM25D1GA03
-089. XINCUN XCSP1AAWH-NT
+021. MXIC MX35LF1GE4AB
+022. MXIC MX35LF2GE4AB
+023. MXIC MX35LF2G14AC
+024. MXIC MX35LF2GE4AD
+025. ZENTEL A5U12A21ASC
+026. ZENTEL A5U1GA21BWS
+027. ETRON EM73C044SNB
+028. ETRON EM73C044SND
+029. ETRON EM73C044SNF
+030. ETRON EM73C044VCA
+031. ETRON EM73C044VCD
+032. ETRON EM73D044VCA
+033. ETRON EM73D044VCB
+034. ETRON EM73D044VCD
+035. ETRON EM73D044VCG
+036. ETRON EM73D044VCH
+037. ETRON EM73D044SNA
+038. ETRON EM73D044SNC
+039. ETRON EM73D044SND
+040. ETRON EM73D044SNF
+041. ETRON EM73E044SNA
+042. TOSHIBA TC58CVG0S3H
+043. TOSHIBA TC58CVG1S3H
+044. TOSHIBA TC58CVG2S0H
+045. KIOXIA TC58CVG2S0HRAIJ
+046. MICRON MT29F1G01
+047. MICRON MT29F2G01
+048. MICRON MT29F4G01
+049. HEYANG HYF1GQ4UAACAE
+050. HEYANG HYF2GQ4UAACAE
+051. HEYANG HYF2GQ4UHCCAE
+052. HEYANG HYF1GQ4UDACAE
+053. HEYANG HYF2GQ4UDACAE
+054. PN PN26G01A-X
+055. PN PN26G02A-X
+056. PN PN26Q01A-X
+057. ATO ATO25D1GA
+058. ATO ATO25D2GA
+059. ATO ATO25D2GB
+060. FM FM25S01
+061. FM FM25S01A
+062. FM FM25G01B
+063. FM FM25G02B
+064. FM FM25G02C
+065. FM FM25G02
+066. XTX XT26G02B
+067. XTX XT26G01C
+068. XTX XT26G01A
+069. XTX XT26G02A
+070. MIRA PSU1GS20BN
+071. BIWIN BWJX08U
+072. BIWIN BWET08U
+073. FORESEE FS35ND01GD1F1
+074. FORESEE FS35ND01GS1F1
+075. FORESEE FS35ND02GS2F1
+076. FORESEE FS35ND02GD1F1
+077. FORESEE FS35ND01GS1Y2
+078. FORESEE FS35ND02G-S3Y2
+079. FORESEE FS35ND04G-S2Y2
+080. DS DS35Q2GA
+081. DS DS35M2GA
+082. DS DS35Q1GA
+083. DS DS35M1GA
+084. FISON CS11G0T0A0AA
+085. FISON CS11G1T0A0AA
+086. FISON CS11G0G0A0AA
+087. TYM TYM25D2GA01
+088. TYM TYM25D2GA02
+089. TYM TYM25D1GA03
+090. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
