@@ -141,11 +141,11 @@
 #define _SPI_NAND_DEVICE_ID_2_W25N02KV		0x22
 #define _SPI_NAND_DEVICE_ID_1_W25M02GV		0xAB
 #define _SPI_NAND_DEVICE_ID_2_W25M02GV		0x21
-#define _SPI_NAND_DEVICE_ID_MXIC35LF1GE4AB	0x12
-#define _SPI_NAND_DEVICE_ID_MXIC35LF2GE4AB	0x22
-#define _SPI_NAND_DEVICE_ID_1_MXIC35LF2GE4AD	0x26
-#define _SPI_NAND_DEVICE_ID_2_MXIC35LF2GE4AD	0x03
-#define _SPI_NAND_DEVICE_ID_MXIC35LF4GE4AB	0x32
+#define _SPI_NAND_DEVICE_ID_MX35LF1GE4AB	0x12
+#define _SPI_NAND_DEVICE_ID_MX35LF2GE4AB	0x22
+#define _SPI_NAND_DEVICE_ID_MX35LF2G14AC	0x20
+#define _SPI_NAND_DEVICE_ID_1_MX35LF2GE4AD	0x26
+#define _SPI_NAND_DEVICE_ID_2_MX35LF2GE4AD	0x03
 #define _SPI_NAND_DEVICE_ID_A5U12A21ASC		0x20
 #define _SPI_NAND_DEVICE_ID_A5U1GA21BWS		0x21
 #define _SPI_NAND_DEVICE_ID_EM73C044SNA		0x19
@@ -588,8 +588,8 @@ static const struct SPI_NAND_FLASH_INFO_T spi_nand_flash_tables[] = {
 
 	{
 		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
-		dev_id:					_SPI_NAND_DEVICE_ID_MXIC35LF1GE4AB,
-		ptr_name:				"MXIC MX35LF1G",
+		dev_id:					_SPI_NAND_DEVICE_ID_MX35LF1GE4AB,
+		ptr_name:				"MXIC MX35LF1GE4AB",
 		device_size:				_SPI_NAND_CHIP_SIZE_1GBIT,
 		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
 		oob_size:				_SPI_NAND_OOB_SIZE_64BYTE,
@@ -602,8 +602,8 @@ static const struct SPI_NAND_FLASH_INFO_T spi_nand_flash_tables[] = {
 
 	{
 		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
-		dev_id:					_SPI_NAND_DEVICE_ID_MXIC35LF2GE4AB,
-		ptr_name:				"MXIC MX35LF2G",
+		dev_id:					_SPI_NAND_DEVICE_ID_MX35LF2GE4AB,
+		ptr_name:				"MXIC MX35LF2GE4AB",
 		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
 		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
 		oob_size:				_SPI_NAND_OOB_SIZE_64BYTE,
@@ -616,8 +616,22 @@ static const struct SPI_NAND_FLASH_INFO_T spi_nand_flash_tables[] = {
 
 	{
 		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
-		dev_id:					_SPI_NAND_DEVICE_ID_1_MXIC35LF2GE4AD,
-		dev_id_2:				_SPI_NAND_DEVICE_ID_2_MXIC35LF2GE4AD,
+		dev_id:					_SPI_NAND_DEVICE_ID_MX35LF2G14AC,
+		ptr_name:				"MXIC MX35LF2G14AC",
+		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
+		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
+		oob_size:				_SPI_NAND_OOB_SIZE_64BYTE,
+		erase_size:				_SPI_NAND_BLOCK_SIZE_128KBYTE,
+		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
+		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
+		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
+		feature:				SPI_NAND_FLASH_PLANE_SELECT_HAVE,
+	},
+
+	{
+		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
+		dev_id:					_SPI_NAND_DEVICE_ID_1_MX35LF2GE4AD,
+		dev_id_2:				_SPI_NAND_DEVICE_ID_2_MX35LF2GE4AD,
 		ptr_name:				"MXIC MX35LF2GE4AD",
 		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
 		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
